<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.login.LoginActivity">

    <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="40sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/muli_bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"/>

    <TextView
            android:id="@+id/tv_title"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            style="@style/PrimaryText"
            android:fontFamily="@font/muli_bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_title"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"/>

    <EditText
            android:id="@+id/et_email"
            android:layout_below="@id/tv_title"
            style="@style/TextField.Rounded"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/et_password"
            android:hint="@string/hint_password"
            style="@style/TextField.Rounded"
            android:layout_below="@id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    <Button
            android:id="@+id/btn_log_in"
            android:layout_below="@id/et_password"
            style="@style/Button.Rounded.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/log_in_button_text"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    <Button
            android:id="@+id/btn_create_account"
            android:layout_below="@id/btn_log_in"
            style="@style/Button.Rounded.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_create_account"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

</RelativeLayout>