<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".features.register.views.RegisterActivity">

    <data>
        <variable name="viewModel"
                  type="com.egs.demo_zsports.features.register.viewmodel.RegisterViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:backgroundTint="@color/colorPrimary" android:id="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/et_name"
                style="@drawable/bg_cardview_rounded">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/go_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_arrow_back"
                    android:layout_margin="10dp"
                    android:tint="@color/colorWhite"/>

        </androidx.cardview.widget.CardView>

        <EditText
                android:id="@+id/et_name"
                android:inputType="text"
                android:text="@={viewModel.name}"
                style="@style/TextField.Rounded"
                android:hint="@string/hint_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"/>

        <EditText
                android:id="@+id/et_email"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress"
                style="@style/TextField.Rounded"
                android:hint="@string/hint_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                android:layout_margin="10dp"/>

        <EditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                style="@style/TextField.Rounded"
                android:hint="@string/hint_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                android:layout_margin="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="85dp" android:id="@+id/textView6"/>

        <Button
                style="@style/Button.Rounded.Accent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_register"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="25dp"
                android:id="@+id/button2" android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:onClick="@{ () -> viewModel.sendData() }"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>